--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-<h1>Hello world</h1>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>DGA1020</title>
+</head>
+
+<body>
+    <h1>Experiment 2 - Images and Links</h1>
+    <h2>Images</h2>
+    <a href="https://www.google.com" target="_blank">
+        <img src="dog.jpg">
+    </a>
+
+    <h2>Links</h2>
+    <p>Follow me on <a href="https://www.google.com">Gugil.kom</a></p>
+</body>
+
+</html>
