--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </a>
 
     <h2>Links</h2>
-    <p>Follow me on <a href="https://www.google.com">Gugil.kom</a></p>
+    <p>Google.com - <a href="https://www.google.com">Google.com</a></p>
 </body>
 
 </html>
