--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>Experiment 2 - Images and Links</h1>
     <h2>Images</h2>
     <a href="https://www.google.com" target="_blank">
-        <img src="https://www.thesprucepets.com/thmb/3ABKoAPm0Hu4PcWsDH1giawq7ck=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/chinese-dog-breeds-4797219-hero-2a1e9c5ed2c54d00aef75b05c5db399c.jpg">
+        <img src="https://images.pexels.com/photos/1437466/pexels-photo-1437466.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
     </a>
 
     <h2>Links</h2>
