--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>Experiment 2 - Images and Links</h1>
     <h2>Images</h2>
     <a href="https://www.google.com" target="_blank">
-        <img src="https://images.pexels.com/photos/1437466/pexels-photo-1437466.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
+        <img src="cat.jpg">
     </a>
 
     <h2>Links</h2>
