--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>Experiment 2 - Images and Links</h1>
     <h2>Images</h2>
     <a href="https://www.google.com" target="_blank">
-        <img src="cat.jpg">
+        <img src="https://github.com/lukeb22/lukeb22.github.io/edit/main/cat.jpg">
     </a>
 
     <h2>Links</h2>
