--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
             </div>
 
-                <img src="https://github.com/lukeb22/lukeb22.github.io/tree/main/media/fruit_bowl_medium.png" id="fruit-bowl-title-image">
+                <img src="/fruit_bowl_medium.png" id="fruit-bowl-title-image">
 
                 <img src="https://github.com/lukeb22/lukeb22.github.io/tree/main/media/character_sprite_large.png" id="character-sprite-title-image">
             
